--- a/src/style/sass/base/_helpers.sass
+++ b/src/style/sass/base/_helpers.sass
@@ -7,4 +7,3 @@
 
 .sticky
   position: sticky
-  z-index: 5
